<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/languages_label"
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languages_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/languages_value"
            style="@style/TextBaseRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/languages_label"
            app:layout_constraintStart_toStartOf="@id/other_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/languages_label" />

        <TextView
            android:id="@+id/databases_label"
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/databases_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/languages_value" />

        <TextView
            android:id="@+id/databases_value"
            style="@style/TextBaseRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/other_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/databases_label" />

        <TextView
            android:id="@+id/network_label"
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/network_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/databases_value" />

        <TextView
            android:id="@+id/network_value"
            style="@style/TextBaseRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/other_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/network_label" />

        <TextView
            android:id="@+id/other_label"
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/other_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/network_value" />

        <TextView
            android:id="@+id/other_value"
            style="@style/TextBaseRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/other_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/other_label" />

       </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
