<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/general_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">


        <ImageView
            android:id="@+id/photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/name"
            style="@style/TextHead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo" />

        <TextView
            android:id="@+id/position"
            style="@style/TextSubHead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/city_label"
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/city_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/position" />

        <TextView
            android:id="@+id/city_value"
            style="@style/TextBaseRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@id/city_label"
            app:layout_constraintStart_toEndOf="@id/city_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/city_label" />

        <TextView
            android:id="@+id/age_label"
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/age_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city_value" />

        <TextView
            android:id="@+id/age_value"
            style="@style/TextBaseRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@id/age_label"
            app:layout_constraintStart_toEndOf="@id/age_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/age_label" />

        <TextView
            android:id="@+id/exp_label"
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/exp_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_value" />

        <TextView
            android:id="@+id/exp_value"
            style="@style/TextBaseRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@id/exp_label"
            app:layout_constraintStart_toEndOf="@id/exp_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/exp_label" />

        <TextView
            android:id="@+id/exp_dev_label"
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/exp_dev_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exp_value" />

        <TextView
            android:id="@+id/exp_dev_value"
            style="@style/TextBaseRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@id/exp_dev_label"
            app:layout_constraintStart_toEndOf="@id/exp_dev_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/exp_dev_label" />

        <TextView
            android:id="@+id/education_label"
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/education_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exp_dev_value" />

        <TextView
            android:id="@+id/education_value"
            style="@style/TextBaseRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/education_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/education_label" />

        <TextView
            android:id="@+id/university_label"
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/university_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/education_value" />

        <TextView
            android:id="@+id/university_value"
            style="@style/TextBaseRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@id/university_label"
            app:layout_constraintStart_toEndOf="@id/university_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/university_label" />

        <TextView
            android:id="@+id/fakulty_label"
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fakulty_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/university_value" />

        <TextView
            android:id="@+id/fakulty_value"
            style="@style/TextBaseRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@id/fakulty_label"
            app:layout_constraintStart_toEndOf="@id/fakulty_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fakulty_label" />

        <TextView
            android:id="@+id/education_years_label"
            style="@style/TextBaseBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/education_years_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fakulty_value" />

        <TextView
            android:id="@+id/education_years_value"
            style="@style/TextBaseRegular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="@id/education_years_label"
            app:layout_constraintStart_toEndOf="@id/education_years_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/education_years_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
